 2025-06- ------------------------------------------------------------------------------------------------------------
 2025-06- ------------------------------------------------------------------------------------------------------------
 2025-06- ------------------------------------------------------------------------------------------------------------
 2025-06- ------------------------------------------------------------------------------------------------------------
 2025-06-28 ------------------------------------------------------------------------------------------------------------
1 Finally have most conversions to the new backend/frontend handling finished, final step of export/import documents
    is all that really remains now.
1 Finished doc-level export-to-file and reworked it in such a way that it should work as a cut/copy/paste handler too

 2025-06-26 ------------------------------------------------------------------------------------------------------------
1 modded autoSave slightly so it now releases immediately no matter what (by wrapping _process in setTimeout())
1 DelDoc is now fully working as an autoSave() op
1 cleaned up a few things about packets, mostly document work
1 added Fault() handler so any packets sent FtoB will now open an error dialog even if not waited for

2025-06-25 ------------------------------------------------------------------------------------------------------------
1 "AddDoc" and "ModDoc:name" are now fully working
1 "AddDb" now fully working under the new pktBtoF standard too

2025-06-23 ------------------------------------------------------------------------------------------------------------
1 fixed new bug caused by changing autoSave(kwd,payload), where payload was in this case a {}, causing the compare to 
    fail, so JSON.stringify(payload) now so compare works properly
1 autoSave("kwd:subkey", payload) now working